--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.82"
-chrono = "0.4.37"
-quick-xml = "0.31.0"
-serde = "1.0.197"
-serde_derive = "1.0.197"
-serde_json = "1.0.115"
+anyhow = "1"
+axum = "0.7"
+chrono = "0.4"
+envy = "0.4"
+quick-xml = "0.31"
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
+tokio = { version = "1", features = ["full"] }
+hyper = { version = "1", features = ["full"] }
+reqwest = "0.12.3"
+dotenvy = "0.15.7"
+tower-http = { version = "0.5", features = ["auth"] }
