Fetch data from kalive-api
Missing:
- modes (might not be useful?)
- deviations / siri

--- a/Avganar/.vscode/launch.json
+++ b/Avganar/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "name": "Run App",
             "stopAtLaunch": false,
-            "device": "fr745"
+            "device": "venu3"
         },
         {
             "type": "monkeyc",
